--- a/app/src/main/res/layout/detail_transaksi.xml
+++ b/app/src/main/res/layout/detail_transaksi.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:orientation="vertical">
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -207,5 +206,25 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/btcetak"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/selector_transaksi"
+        android:clickable="true"
+        android:drawableLeft="@drawable/baseline_local_printshop_24"
+        android:drawablePadding="8dp"
+        android:gravity="center"
+        android:paddingLeft="44dp"
+        android:paddingTop="16dp"
+        android:paddingRight="44dp"
+        android:paddingBottom="16dp"
+        android:text="Cetak"
+        android:textColor="@color/putih_tetap"
+        android:textSize="14dp"
+        android:textStyle="bold" />
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
