--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,29 +2,55 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="800"
+    android:viewportHeight="800">
+  <group android:scaleX="0.7"
+      android:scaleY="0.7"
+      android:translateX="120"
+      android:translateY="120">
+    <path
+        android:pathData="M0,0h800v800h-800z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:centerX="400"
+            android:centerY="400"
+            android:gradientRadius="400"
+            android:type="radial">
+          <item android:offset="0" android:color="#FFFFFFFF"/>
+          <item android:offset="1" android:color="#FFEFEFEF"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M330.5,624.6c-8.7,0 -17.2,-1.8 -25.2,-5.2c-3.8,-1.7 -7.5,-3.8 -11,-6.2c-3.4,-2.4 -6.6,-5.1 -9.6,-8.2c-5.9,-6.2 -10.7,-13.3 -13.9,-21.2c-1.7,-4 -3,-8.2 -3.8,-12.6c-1.8,-8.9 -1.8,-18 0,-26.9c1.7,-8.5 5,-16.6 9.7,-23.8c2.3,-3.6 5,-6.9 7.9,-9.8c3,-3 6.2,-5.7 9.6,-8.2c3.4,-2.4 7.1,-4.5 11,-6.2c16,-7 34.3,-7 50.3,0c3.8,1.7 7.5,3.8 11,6.2c3.4,2.4 6.6,5.1 9.6,8.2c5.9,6.2 10.7,13.3 13.9,21.2c1.7,4 3,8.2 3.8,12.6c1.8,8.9 1.8,18 0,26.9c-1.7,8.5 -5,16.6 -9.7,23.8c-2.3,3.6 -5,6.9 -7.9,9.8c-3,3 -6.2,5.7 -9.6,8.2c-3.4,2.4 -7.1,4.5 -11,6.2C347.7,622.9 339.1,624.6 330.5,624.6L330.5,624.6zM346.3,540c-19.8,0 -35.8,16.6 -35.8,37s16.1,37 35.8,37c19.8,0 35.8,-16.6 35.8,-37C382.1,556.6 366.1,540 346.3,540L346.3,540z"
+        android:fillColor="#2670A6"/>
+    <path
+        android:pathData="M510.8,624.6c0,0 83.5,-134.1 -64.3,-205.3S294,330.5 296.3,295.7c0,0 -78,94.4 43,155.1S512,567.4 510.8,624.6z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="402.98"
+            android:startY="295.68"
+            android:endX="402.98"
+            android:endY="624.6"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF1B4D7E"/>
+          <item android:offset="1" android:color="#FF3299D3"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M482.6,155.4c0,0 38,38.9 -180.5,138.7c0,0 -7.8,38.7 42.8,61C345,355.1 563.6,271.6 482.6,155.4z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="401.16"
+            android:startY="355.11"
+            android:endX="401.16"
+            android:endY="155.4"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF539E4C"/>
+          <item android:offset="1" android:color="#FF1FCEE0"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
