--- a/app/src/main/res/drawable/ic_logo.xml
+++ b/app/src/main/res/drawable/ic_logo.xml
@@ -1,36 +1,51 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="142dp"
-    android:height="142dp"
-    android:viewportWidth="142"
-    android:viewportHeight="142">
-  <group>
-    <clip-path
-        android:pathData="M0,0H142V142H0Z"/>
-    <path
-        android:pathData="M71,71m-71,0a71,71 0,1 1,142 0a71,71 0,1 1,-142 0">
-      <aapt:attr name="android:fillColor">
-        <gradient 
-            android:centerX="71"
-            android:centerY="71"
-            android:gradientRadius="71"
-            android:type="radial">
-          <item android:offset="0" android:color="#FFFFFFFF"/>
-          <item android:offset="1" android:color="#FFDBDBDD"/>
-        </gradient>
-      </aapt:attr>
-    </path>
-  </group>
+    android:width="800dp"
+    android:height="800dp"
+    android:viewportWidth="800"
+    android:viewportHeight="800">
   <path
-      android:pathData="M85.98,51.26l-12.81,-22.32a2.5,2.5 0,0 0,-4.33 0L24.79,105.66C26.6,102.99 57.91,57.26 85.98,51.26Z"
-      android:fillColor="#679ddb"/>
+      android:pathData="M0,0h800v800h-800z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:centerX="400"
+          android:centerY="400"
+          android:gradientRadius="400"
+          android:type="radial">
+        <item android:offset="0" android:color="#FFFFFFFF"/>
+        <item android:offset="1" android:color="#FFEFEFEF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
   <path
-      android:pathData="M81.37,43.23l-8.2,-14.29a2.5,2.5 0,0 0,-4.33 0L24.79,105.66c0.46,-0.67 2.8,-4.09 6.48,-8.92C56.43,58.01 73.65,46.59 81.37,43.23Z"
-      android:fillColor="#84afe2"/>
+      android:pathData="M330.5,624.6c-8.7,0 -17.2,-1.8 -25.2,-5.2c-3.8,-1.7 -7.5,-3.8 -11,-6.2c-3.4,-2.4 -6.6,-5.1 -9.6,-8.2c-5.9,-6.2 -10.7,-13.3 -13.9,-21.2c-1.7,-4 -3,-8.2 -3.8,-12.6c-1.8,-8.9 -1.8,-18 0,-26.9c1.7,-8.5 5,-16.6 9.7,-23.8c2.3,-3.6 5,-6.9 7.9,-9.8c3,-3 6.2,-5.7 9.6,-8.2c3.4,-2.4 7.1,-4.5 11,-6.2c16,-7 34.3,-7 50.3,0c3.8,1.7 7.5,3.8 11,6.2c3.4,2.4 6.6,5.1 9.6,8.2c5.9,6.2 10.7,13.3 13.9,21.2c1.7,4 3,8.2 3.8,12.6c1.8,8.9 1.8,18 0,26.9c-1.7,8.5 -5,16.6 -9.7,23.8c-2.3,3.6 -5,6.9 -7.9,9.8c-3,3 -6.2,5.7 -9.6,8.2c-3.4,2.4 -7.1,4.5 -11,6.2C347.7,622.9 339.1,624.6 330.5,624.6L330.5,624.6zM346.3,540c-19.8,0 -35.8,16.6 -35.8,37s16.1,37 35.8,37c19.8,0 35.8,-16.6 35.8,-37C382.1,556.6 366.1,540 346.3,540L346.3,540z"
+      android:fillColor="#2670A6"/>
   <path
-      android:pathData="M117.19,105.64 L87.02,53.07c-0.06,0.02 -0.12,0.04 -0.17,0.06C49.11,67.82 28.62,104.86 28.62,104.86c89.02,-32.62 25.37,-24.53 25.37,-24.53C84.68,64.93 113.31,100.53 117.19,105.64Z"
-      android:fillColor="#f5962a"/>
+      android:pathData="M510.8,624.6c0,0 83.5,-134.1 -64.3,-205.3S294,330.5 296.3,295.7c0,0 -78,94.4 43,155.1S512,567.4 510.8,624.6z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="402.98"
+          android:startY="295.68"
+          android:endX="402.98"
+          android:endY="624.6"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF1B4D7E"/>
+        <item android:offset="1" android:color="#FF3299D3"/>
+      </gradient>
+    </aapt:attr>
+  </path>
   <path
-      android:pathData="M87.02,53.07c-0.06,0.02 -0.12,0.04 -0.17,0.06 -33.96,13.22 -53.95,44.54 -57.61,50.67 10.96,-11.35 21.06,-18.97 30.06,-24.01 -3.06,0.25 -5.31,0.53 -5.31,0.53a35.59,35.59 0,0 1,11.11 -3.51c14.47,-6.72 25.63,-6.7 32.36,-5.55Z"
-      android:fillColor="#f7aa52"/>
+      android:pathData="M482.6,155.4c0,0 38,38.9 -180.5,138.7c0,0 -7.8,38.7 42.8,61C345,355.1 563.6,271.6 482.6,155.4z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="401.16"
+          android:startY="355.11"
+          android:endX="401.16"
+          android:endY="155.4"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF539E4C"/>
+        <item android:offset="1" android:color="#FF1FCEE0"/>
+      </gradient>
+    </aapt:attr>
+  </path>
 </vector>
