--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,11 +30,20 @@
                 android:orientation="vertical"
                 android:paddingTop="16dp">
 
-                <ImageView
+                <androidx.cardview.widget.CardView
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="24dp"
-                    android:src="@drawable/ic_logo" />
+                    app:cardCornerRadius="120dp"
+                    app:cardElevation="0dp">
+
+                    <ImageView
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/ic_logo" />
+
+                </androidx.cardview.widget.CardView>
+
 
                 <TextView
                     android:layout_width="wrap_content"
