--- a/app/src/main/res/layout/activity_transaksi.xml
+++ b/app/src/main/res/layout/activity_transaksi.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:orientation="vertical">
+    android:background="@color/background">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -89,7 +87,6 @@
 
         </RelativeLayout>
 
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -125,14 +122,18 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fillViewport="true"
+                android:layout_height="wrap_content"
                 android:scrollbars="none">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="48dp"
+                    android:background="@drawable/bg_list_white"
+                    android:padding="16dp">
 
                     <TextView
                         android:id="@+id/txtpesan"
@@ -144,34 +145,16 @@
                         android:textStyle="bold"
                         android:visibility="gone" />
 
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rcList"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginBottom="48dp"
-                        android:background="@drawable/bg_list_white"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <!--                    <LinearLayout-->
-                        <!--                        android:layout_width="match_parent"-->
-                        <!--                        android:layout_height="wrap_content"-->
-                        <!--                        android:layout_weight="1"-->
-                        <!--                        android:orientation="vertical">-->
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rcList"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                        <!--                    </LinearLayout>-->
-
-                    </LinearLayout>
-
-
+                        android:nestedScrollingEnabled="false" />
                 </LinearLayout>
             </ScrollView>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -227,4 +210,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
