--- a/app/src/main/res/layout/activity_produk.xml
+++ b/app/src/main/res/layout/activity_produk.xml
@@ -42,7 +42,8 @@
 
         </RelativeLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -120,7 +121,7 @@
 
 
             </LinearLayout>
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
