--- a/app/src/main/res/layout/activity_produk.xml
+++ b/app/src/main/res/layout/activity_produk.xml
@@ -42,8 +42,7 @@
 
         </RelativeLayout>
 
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/nestedScrollView"
+        <ScrollView
             android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -96,14 +95,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:padding="16dp"
+                        android:padding="5dp"
                         android:textSize="14dp"
                         android:textStyle="bold" />
                     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                         android:id="@+id/swipe_refreshdatahistorykegiatan"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-<!--                        android:listSelector="@drawable/list_row_selector"-->
+                        <!--                        android:listSelector="@drawable/list_row_selector"-->
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -121,7 +120,7 @@
 
 
             </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
+        </ScrollView>
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
